// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`match played to a decision > reaches a winner and matches the recorded outcome 1`] = `
{
  "matchWinner": 1,
  "p1": {
    "hp": 0,
    "state": "KO",
    "x": 307.9139,
  },
  "p2": {
    "hp": 52.1603,
    "state": "VICTORY",
    "x": 520.618,
  },
  "phase": "ending",
  "round": 2,
  "roundWins": [
    0,
    2,
  ],
  "tick": 2917,
}
`;

exports[`one-player match against the CPU > replays identically, including every CPU decision 1`] = `
[
  "t150:e08a0e60",
  "t300:69d332ae",
  "t450:947c0faa",
  "t600:cefbaf39",
  "t750:3ca5721c",
  "t900:c94aba72",
]
`;

exports[`one-player match against the CPU > replays identically, including every CPU decision 2`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 64.3204,
    "state": "HEAVY_ATTACK",
    "x": 385.9203,
  },
  "p2": {
    "hp": 100,
    "state": "JUMP",
    "x": 699.4375,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 900,
}
`;

exports[`projectile and zone characters > matches the recorded checksum trail 1`] = `
[
  "t120:6d656cda",
  "t240:fba0ccf3",
  "t360:f6329552",
  "t480:b898bdfa",
  "t600:b4e31e56",
  "t720:3fbec2b3",
  "t840:d1c5be46",
]
`;

exports[`two-player scripted match > matches the recorded checksum trail 1`] = `
[
  "t120:efe5b355",
  "t240:116bfa88",
  "t360:631525c4",
  "t480:92f8a036",
  "t600:761ee9da",
  "t720:5bcfec88",
  "t840:b1159ddb",
  "t960:918d3396",
  "t1080:1f0d392f",
  "t1200:cd2d8989",
]
`;

exports[`two-player scripted match > matches the recorded final state 1`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 14.9986,
    "state": "IDLE",
    "x": 172.5741,
  },
  "p2": {
    "hp": 91.4952,
    "state": "SPECIAL",
    "x": 805.2981,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 1200,
}
`;
